--- a/templates/gerer_pieces_equipement.html
+++ b/templates/gerer_pieces_equipement.html
@@ -6,7 +6,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
     <h1 class="h2">Gérer les pièces de rechange - {{ equipement.nom }}</h1>
     <div class="btn-toolbar mb-2 mb-md-0">
-        <a href="{{ url_for('equipements') }}" class="btn btn-secondary">
+        <a href="{{ url_for('modifier_equipement', equipement_id=equipement.id) }}" class="btn btn-secondary">
             <i class="fas fa-arrow-left"></i> Retour
         </a>
     </div>
@@ -66,7 +66,7 @@
                     </div>
                     
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <a href="{{ url_for('equipements') }}" class="btn btn-secondary me-md-2">Annuler</a>
+                        <a href="{{ url_for('modifier_equipement', equipement_id=equipement.id) }}" class="btn btn-secondary me-md-2">Annuler</a>
                         <button type="submit" class="btn btn-primary">
                             <i class="fas fa-save"></i> Enregistrer les associations
                         </button>
