--- a/templates/base.html
+++ b/templates/base.html
@@ -49,8 +49,8 @@
         }
         
         .sidebar .logo-circle img {
-            max-width: 70px;
-            max-height: 70px;
+            max-width: 90px;
+            max-height: 90px;
         }
         
         .sidebar .nav {
@@ -91,12 +91,12 @@
         
         /* Styles pour le bouton de déconnexion */
         .sidebar .nav-link.text-danger {
-            color: #dc3545 !important;
+            color: #fff !important;
             margin-top: 1rem;
         }
         
         .sidebar .nav-link.text-danger:hover {
-            background: #dc3545 !important;
+            background: rgba(255, 255, 255, 0.1) !important;
             color: #fff !important;
         }
         
@@ -309,8 +309,8 @@
             }
             
             .sidebar .logo-circle img {
-                max-width: 50px;
-                max-height: 50px;
+                max-width: 65px;
+                max-height: 65px;
             }
             
             .sidebar .nav-link {
@@ -552,8 +552,8 @@
             }
             
             .sidebar .logo-circle img {
-                max-width: 35px;
-                max-height: 35px;
+                max-width: 45px;
+                max-height: 45px;
             }
             
             /* Tableaux encore plus compacts */
